Das Encoding aller .java und .csv Dateien wurde zu UTF-8 geändert. Das ganze wurde unter Linux mit iconv gemacht (find . -type f -name "*.java" -exec iconv --from-code=WINDOWS-1252 --to-code=UTF8 {} --output={} \;)
Zugehöriges Ticket: refs #4